--- a/Sitecore.Labs.Rules/Sitecore.Labs.Rules.csproj
+++ b/Sitecore.Labs.Rules/Sitecore.Labs.Rules.csproj
@@ -31,11 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Sitecore.Analytics">
+      <HintPath>..\..\..\..\inetpub\wwwroot\msn\Website\bin\Sitecore.Analytics.dll</HintPath>
+    </Reference>
     <Reference Include="Sitecore.Kernel">
-      <HintPath>..\lib\Sitecore.Kernel.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\inetpub\wwwroot\msn\Website\bin\Sitecore.Kernel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -46,10 +49,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Actions\Add Control.cs" />
+    <Compile Include="Common\Actions\SetMVDataSource.cs" />
+    <Compile Include="Common\Conditions\AliasDetection.cs" />
+    <Compile Include="Common\Conditions\AnsweredAPoll.cs" />
+    <Compile Include="Common\Conditions\CampaignSensor.cs" />
+    <Compile Include="Common\Conditions\DateRangeCondition.cs" />
+    <Compile Include="Common\Conditions\IsExitPage.cs" />
+    <Compile Include="Common\Conditions\ModifyProfileScore.cs" />
+    <Compile Include="Common\Conditions\PageEventCount.cs" />
+    <Compile Include="Common\Conditions\PageEventDetected.cs" />
+    <Compile Include="Common\Conditions\ReferrerDetection.cs" />
+    <Compile Include="Common\Conditions\SmallPage.cs" />
+    <Compile Include="Common\Conditions\TimedProfileScores.cs" />
     <Compile Include="Common\CreateFolderStructureAction.cs" />
+    <Compile Include="Common\Actions\DeviceDetection.cs" />
+    <Compile Include="Common\Actions\FireGoal.cs" />
     <Compile Include="Common\LockItemAction.cs" />
+    <Compile Include="Common\Actions\ProfileMultiplier.cs" />
+    <Compile Include="Common\Actions\SetParameterTemplateValue.cs" />
     <Compile Include="InsertOptions\ClearInsertOptionsActoin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Stratergies\MVIterate.cs" />
+    <Compile Include="Tests\Stratergies\SmartMultiVariantStatergy.cs" />
+    <Compile Include="Tests\Stratergies\TimedMVTest.cs" />
     <Compile Include="Workflow\CancelAction.cs" />
     <Compile Include="Workflow\CommentCondition.cs" />
     <Compile Include="Workflow\LockActionValidator.cs" />
