--- a/Sitecore.Labs.Rules/Sitecore.Labs.Rules.csproj
+++ b/Sitecore.Labs.Rules/Sitecore.Labs.Rules.csproj
@@ -32,10 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sitecore.Analytics">
-      <HintPath>..\..\..\..\inetpub\wwwroot\msn\Website\bin\Sitecore.Analytics.dll</HintPath>
+      <HintPath>..\lib\Sitecore.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="Sitecore.Kernel">
-      <HintPath>..\..\..\..\inetpub\wwwroot\msn\Website\bin\Sitecore.Kernel.dll</HintPath>
+      <HintPath>..\lib\Sitecore.Kernel.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
